@@ -5,6 +5,7 @@ base-installer (1.16) UNRELEASED; urgency=low
     - Add G5 PowerMac7,3 tests based on /proc/cpuinfo provided by Shyamal
       Prasad.
     - Prefer SMP kernels on multi-processor powerpc systems.
+    - Improve kernel selection for Transmeta Crusoe i386 systems.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 17 Jan 2005 14:33:33 +0000
 
